name:                as3-ast
version:             0.1.0.0
synopsis:            ActionScript3 (AS3) parser/lexer that builds an Abstract Sytax Tree (AST) from AS3 source
description:         ActionScript3 (AS3) parser/lexer that builds an Abstract Sytax Tree (AST) from AS3 source
homepage:            https://github.com/phylake/AS3-AST
license:             BSD3
license-file:        LICENSE
author:              Brandon Cook
maintainer:          phylake@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  LICENSE

library
  default-language:    Haskell2010
  exposed-modules:     Data.AS3.AST.Parser
  other-modules:       Data.AS3.AST.Def
                     , Data.AS3.AST.Grammar.Expressions
                     , Data.AS3.AST.Grammar.Lexicon
                     , Data.AS3.AST.Grammar.Statements
                     , Data.AS3.AST.Prims
                     , Data.AS3.AST.Show
                     , Data.AS3.AST.ThirdParty
                     , Util.Misc
  build-depends:       base >= 4.5
                     , bytestring >= 0.9
                     , directory >= 1.1
                     , filepath >= 1.3
                     , hashtables >= 1.1
                     , monadLib >= 3.7
                     , mtl >= 2.0
                     , parsec >= 3.1
                     , transformers >= 0.2.2

source-repository head
  type:     git
  location: git://github.com/phylake/AS3-AST.git
